<resources>
    <string name="app_name">Timbangan Truk</string>
    <string name="number_only">0123456789</string>

    <string name="new_ticket">New Ticket</string>
    <string name="edit_ticket">Edit Ticket</string>

    <string name="detail_ticket">Detail Ticket</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="hint_driver_name">Driver Name</string>
    <string name="hint_license_plate">License Plate</string>
    <string name="hint_inbound">Inbound Weight</string>
    <string name="hint_outbound">Outbound Weight</string>
    <string name="hint_net_weight">Net Weight</string>
    <string name="hint_checkin_time">Check-in Time</string>
    <string name="suffix_weight_unit">Kg</string>

    <string name="error_not_empty">This field cannot be empty</string>
    <string name="error_less_than">This field should be lesser than %s</string>
    <string name="error_greater_than_number">This field should be greater than %d</string>
    <string name="error_greater_than_field">This field should be greater than %s</string>

    <string name="please_wait">Please Wait…</string>

    <string name="cargo">Cargo</string>
    <string name="inbound_format">Inbound %d Kg</string>
    <string name="outbound_format">Outbound %d Kg</string>
    <string name="net_format">Nett %d Kg</string>

    <string name="sort_filter">Filter &amp; Sort</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="filter_field">Select a field</string>
    <string name="filter_term">Set a term</string>
    <string name="sort_direction">Sort Direction</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>

    <string-array name="filter_field_array">
        <item>Check-in Time</item>
        <item>Driver Name</item>
        <item>License Plate</item>
    </string-array>

</resources>
